fix: warning and use of SEEt instead of list for perf